# aas-deltasync

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/aas-deltasync-adapter-aas/: Cargo.toml
crates/aas-deltasync-adapter-aas/src/: client.rs  encoding.rs  lib.rs
crates/aas-deltasync-adapter-basyx/: Cargo.toml
crates/aas-deltasync-adapter-basyx/src/: events.rs  lib.rs  subscriber.rs
crates/aas-deltasync-adapter-faaast/: Cargo.toml
crates/aas-deltasync-adapter-faaast/src/: lib.rs  poller.rs
crates/aas-deltasync-agent/: Cargo.toml
crates/aas-deltasync-agent/src/: config.rs  main.rs  persistence.rs  replication.rs  runtime.rs
crates/aas-deltasync-agent/tests/: integration.rs
crates/aas-deltasync-cli/: Cargo.toml
crates/aas-deltasync-cli/src/: main.rs
crates/aas-deltasync-core/: Cargo.toml
crates/aas-deltasync-core/src/: crdt.rs  document.rs  hlc.rs  lib.rs  merge.rs
crates/aas-deltasync-proto/: Cargo.toml
crates/aas-deltasync-proto/src/: lib.rs  messages.rs  topics.rs
docs/design/: crdt-mapping.md
docs/review/: DEBUGGING_PLAYBOOK.md
examples/: demo.sh  docker-compose.yml
examples/basyx/: aas-repo-a.properties  aas-repo-b.properties  sm-repo-a.properties  sm-repo-b.properties
examples/mosquitto/: mosquitto.conf
examples/tls/: .gitignore  README.md  docker-compose.yml  generate-certs.sh  mosquitto.conf  openssl.cnf
proto/: README.md
specs/: README.md
