[package]
name = "aas-deltasync-adapter-aas"
description = "AAS Part 2 encoding utilities and HTTP client for AAS-ΔSync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aas-deltasync-core = { path = "../aas-deltasync-core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
