[package]
name = "aas-deltasync-agent"
description = "AAS-ΔSync synchronization agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aas-deltasync-agent"
path = "src/main.rs"

[dependencies]
aas-deltasync-core = { path = "../aas-deltasync-core" }
aas-deltasync-proto = { path = "../aas-deltasync-proto" }
aas-deltasync-adapter-aas = { path = "../aas-deltasync-adapter-aas" }
aas-deltasync-adapter-basyx = { path = "../aas-deltasync-adapter-basyx" }
aas-deltasync-adapter-faaast = { path = "../aas-deltasync-adapter-faaast" }
tokio.workspace = true
rumqttc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
