[package]
name = "aas-deltasync-core"
description = "CRDT model, HLC timestamps, and merge semantics for AAS-ΔSync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crdts.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
